--- a/assets/css/style/_resources.scss
+++ b/assets/css/style/_resources.scss
@@ -3,37 +3,37 @@
 .resource-block {
 	display: table;
 	margin-bottom: 20px;
-}
+	@include clearfix;
 
-.resource-block + .resource-block {
-	border-top: 1px dotted #000;
-	padding-top: 20px;
-}
+	.resource-text,
+	.resource {
+		float: none;
+		display: table-cell;
+		vertical-align: middle;
+	}
 
-.resource-text,
-.resource-block .resource {
-	float: none;
-	display: table-cell;
-	vertical-align: middle;
-	margin: 0;
-}
+	.resource {
+		padding-right: 20px;
+	}
 
-.resource-text {
-	vertical-align: top;
-}
+	.resource-text {
+		vertical-align: top;
 
-.resource-block .resource img {
-	margin-right: 20px;
-}
+		.note {
+			margin: 0 10px 0 0;
+		}
 
-.resource-text .note {
-	margin: 0 10px 0 0;
-}
+		.CodeMirror {
+			// Having height at 100% in resource-blocks breaks table layout
+			height: auto;
+			margin-bottom: 20px;
+		}
+	}
 
-.resource-text .CodeMirror {
-	// Having height at 100% in resource-blocks breaks table layout
-	height: auto;
-	margin-bottom: 20px;
+	& + & {
+		border-top: 1px dotted #000;
+		padding-top: 20px;
+	}
 }
 
 /* Thumbnails */
